Fix hotbar button text alignment.

--- a/sass/_panels.sass
+++ b/sass/_panels.sass
@@ -58,7 +58,7 @@
 
   .ts-button
     font-size: 1em
-    padding-top: 2px
+    padding-top: 4px
 
   .ts-toggle span
     width: 12px
